# churn-prediction-pipeline

./: .gitignore  pyproject.toml
.kiro/specs/churn-pipeline-aws/: design.md  requirements.md  tasks.md
.kiro/steering/: project-context.md
configs/client_banking/: mapping.yaml
configs/client_ecommerce/: mapping.yaml
configs/client_telco/: mapping.yaml
data/: README.md
notebooks/: 01_data_contract_and_mapping.ipynb  02_schema_validation.ipynb  03_feature_engineering.ipynb  04_training_fundamentals.ipynb  05_evaluation_and_scoring.ipynb  06_drift_monitoring.ipynb  07_llm_integration.ipynb
scripts/: download_telco.py
src/churn_pipeline/: __init__.py  data_contract.py  mapping_config.py  s3_paths.py
src/churn_pipeline/llm/: __init__.py  auto_mapping.py  narrative_generator.py
src/churn_pipeline/steps/: __init__.py  clean_data.py  evaluation.py  feature_engineering.py  monitoring.py  scoring.py  training.py  validate_data.py
tests/property/: test_evaluation.py  test_feature_engineering.py  test_mapping_roundtrip.py  test_monitoring.py  test_narrative.py  test_s3_paths.py  test_schema_validation.py  test_scoring.py  test_training.py
tests/unit/: test_auto_mapping.py  test_evaluation.py  test_monitoring.py  test_narrative.py  test_validate_data.py
