[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "churn-pipeline"
version = "0.1.0"
description = "Productized churn prediction pipeline on AWS"
requires-python = ">=3.11"
dependencies = [
    "sagemaker>=2.200.0",
    "boto3>=1.34.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "shap>=0.44.0",
    "pyyaml>=6.0.1",
    "mlflow>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.98.0",
    "moto[s3,sagemaker]>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "property: property-based tests using Hypothesis",
    "unit: unit tests",
    "integration: integration tests requiring AWS mocks",
]

[tool.hatch.build.targets.wheel]
packages = ["src/churn_pipeline"]
